# Ages

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE_HISTORY.md  CONTRIBUTING.md  Cargo.toml  PLANNING.md  README.md  REQUIREMENTS.md  narrate.py  run.sh
.claude/: settings.json
.claude/hooks/: session-start.sh  snapshot-transcript.sh
ages/: Cargo.toml
ages/src/: config_prompt.rs  main.rs
docs/: MANIFEST.md  PROJECT.md  archetype.md  architecture.md  catastrophes.md  civ.md  code-audit.md  code-reaudit-round3.md  code-reaudit.md  culture.md  discovery.md  expert-review-roadmap.md  getting-started.md  implementation-plan.md  magic-constants.md  physics.md  population.md  post-fix-astro-review.md  post-fix-xeno-review.md  post-implementation-astro-review.md  post-implementation-fixes.md  post-implementation-xeno-review.md  recognition.md  report.md  round3-astro-review.md  round3-xeno-review.md  round4-astro-final-review.md  round4-xeno-final-review.md  round5-astro-final-review.md  round5-xeno-final-review.md  species.md  tech.md  viewport.md  world.md
docs/decisions/: INDEX.md  q01.md  q02.md  q03.md  q04.md  q05.md  q06.md  q07.md  q08.md  q09.md  q10.md  q100.md  q101.md  q102.md  q103.md  q104.md  q105.md  q106.md  q107.md  q108.md  q109.md  q11.md  q110.md  q111.md  q112.md  q113.md  q114.md  q115.md  q116.md  q117.md  q118.md  q119.md  q12.md  q120.md  q121.md  q122.md  q123.md  q124.md  q125.md  q126.md  (+118 more)
docs/internal/: README.md  magic-constants.md  maintenance.md
protocol/: Cargo.toml  README.md
protocol/src/: civ_events.rs  discovery_events.rs  header.rs  lib.rs  snapshot.rs  world_events.rs
sim/arith/: Cargo.toml  README.md
sim/arith/src/: lib.rs
sim/civ/: Cargo.toml  README.md
sim/civ/src/: apparatus.rs  archetype.rs  capacity.rs  conflict.rs  cosmology.rs  culture_hooks.rs  demographics.rs  drift.rs  economy.rs  environmental_drift.rs  figures.rs  fit.rs  forms.rs  founding.rs  lib.rs  lifecycle.rs  naming.rs  observation.rs  religion.rs  state.rs  succession.rs  territory.rs  tests.rs  tools.rs  transmission.rs
sim/civ/src/catastrophe/: apply.rs  cells.rs  damage.rs  factors.rs  kind.rs  mod.rs  record.rs  triggers.rs
sim/civ/src/catastrophe/apply/: asteroid.rs  disease.rs  ice_age.rs  mod.rs  solar_flare.rs  test_helpers.rs  volcanic.rs
sim/civ/src/conflict/: alliance.rs  assessment.rs  grudge.rs  mod.rs  war.rs
sim/civ/src/discovery/: channels.rs  emergence.rs  events.rs  hypothesizer.rs  mod.rs  tests.rs  tool_emergence.rs  types.rs
sim/civ/src/tech/: consumption.rs  effects.rs  gating.rs  identity.rs  mod.rs  specs.rs  tests.rs
sim/civ/src/tech/specs/: manipulation.rs  mod.rs  relations.rs  tools.rs
sim/core/: Cargo.toml  README.md
sim/core/src/: config.rs  constants.rs  contact.rs  events.rs  laws.rs  lib.rs  nomads.rs  phases.rs  run_tick.rs  setup.rs  territory.rs  tests.rs
sim/core/src/nomads/: absorption.rs  emergence.rs  growth.rs  init.rs  mod.rs  observation.rs  tests.rs
sim/core/src/tests/: canaries.rs  deterministic.rs  ecosystem.rs  mod.rs  planets.rs  utilities.rs
sim/core/src/tick_steps/: breakaway.rs  catastrophe.rs  civ_lifecycle.rs  contact_trade.rs  emergent_founding.rs  knowledge_diffusion.rs  mod.rs  stateless_refound.rs  war_alliance.rs
sim/core/tests/: find_seed.rs
sim/ecosystem/: Cargo.toml
sim/ecosystem/src/: constants.rs  functional.rs  hgt.rs  invariants.rs  lib.rs  planet.rs  sampling.rs  speciation.rs  species.rs  tests.rs
sim/ecosystem/src/planet/: biogeochem.rs  catastrophe.rs  centrality.rs  extinction.rs  helpers.rs  mod.rs  step.rs
sim/ecosystem/src/tests/: biogeochem.rs  biomass.rs  dynamics.rs  integration.rs  mod.rs  parasitism.rs  pyramid.rs  tolerance.rs
sim/ecosystem/tests/: speciation.rs
sim/events/: Cargo.toml  README.md
sim/events/src/: lib.rs
sim/physics/: Cargo.toml  README.md
sim/physics/src/: albedo.rs  atmospheric_escape.rs  clouds.rs  coriolis.rs  em.rs  fluid.rs  grid.rs  hadley.rs  heat.rs  hemisphere.rs  hydrology.rs  insolation.rs  isostasy.rs  laws.rs  lib.rs  lorentz.rs  magnetism.rs  mechanics.rs  orchestration.rs  radiation.rs  resonance.rs  state.rs  (+9 more)
sim/population/: Cargo.toml  README.md
sim/recognition/: Cargo.toml  README.md
sim/report/: Cargo.toml  README.md
sim/report/src/: ages.rs  frame.rs  highlights.rs  html.rs  labels.rs  lib.rs  narration.rs  parse.rs  q32.rs
sim/report/src/digest/: build.rs  mod.rs  tests.rs  types.rs
sim/report/src/render/: civ.rs  figures.rs  mod.rs  planet.rs  timelines.rs
sim/report/src/tui/: mod.rs  view.rs
sim/report/src/viewport/: ansi.rs  api.rs  cards.rs  config.rs  emitter.rs  layout.rs  log.rs  mod.rs  sidebar.rs  state.rs  tests.rs
sim/species/: Cargo.toml  README.md
sim/species/src/: derive.rs  habitat_glyph.rs  lib.rs  sampling.rs  species.rs  survivability.rs  tests.rs  types.rs
sim/world/: Cargo.toml  README.md
(+50 files in other folders)
