[package]
name = "sim-civ"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
protocol.workspace = true
sim-arith.workspace = true
sim-physics.workspace = true
sim-population.workspace = true
sim-recognition.workspace = true
sim-species.workspace = true
sim-world.workspace = true
rand.workspace = true
rand_chacha.workspace = true
