[package]
name = "sim-ecosystem"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
sim-arith.workspace = true
sim-physics.workspace = true
sim-species.workspace = true
rand.workspace = true
rand_chacha.workspace = true
