[package]
name = "sim-ecosystem"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
protocol.workspace = true
sim-arith.workspace = true
sim-physics.workspace = true
sim-species.workspace = true
rand.workspace = true
rand_chacha.workspace = true

[dev-dependencies]
sim-recognition.workspace = true
sim-world.workspace = true
serde_json.workspace = true
