[package]
name = "sim-report"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
protocol.workspace = true
pulldown-cmark.workspace = true
serde.workspace = true
serde_json.workspace = true
sim-events.workspace = true
thiserror.workspace = true
