[package]
name = "sim-species"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
protocol.workspace = true
sim-arith.workspace = true
sim-world.workspace = true
sim-recognition.workspace = true
rand.workspace = true
rand_chacha.workspace = true
